crates/swc_ecma_parser/tests/test262-error-references/fail/aa5e59b2d67fb00f.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/aa5e59b2d67fb00f.js:1:5
  |
1 | let default
  |     ^^^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/aa5e59b2d67fb00f.js:1:1
  |
1 | let default
  | ^^^

